# CommonVisualizer

./: BulletVisualizer.hpp  CMakeLists.txt  CommonVisualizer.h  CommonVisualizer.hpp  README.md  test.cpp
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dri.yml  docker-compose.yml
examples/: BulletVisualizer.hpp  CMakeLists.txt  ply_viewer.cpp  test_all.cpp  test_bullet_crate.cpp  test_depth_map_saver.cpp  test_screensaver.cpp  test_sep_main.cpp  test_sep_part.cpp  test_spheres.cpp
include/: Arrow.hpp  Box.hpp  Capsule.hpp  CloudPointColored.hpp  CloudPointUnicolor.hpp  CloudSphereColored.hpp  CloudSphereUnicolor.hpp  Cone.hpp  ConeSide.hpp  Container.hpp  CoordinateUnits.hpp  CoordinateUnits3D.hpp  Cylinder.hpp  CylinderSide.hpp  DataStructure.h  DepthMapSaver.hpp  Line.hpp  MeshColored.hpp  MeshUnicolor.hpp  Object.hpp  OrientedCircle.hpp  ScreenSaver.hpp  Vec.h  include_gl.h
shaders/: fs_cone_side.fs  fs_cylinder_side.fs  fs_oriented_circle.fs  fs_phong_simple.fs  fs_simple.fs  fs_sphere.fs  fs_sub_phong.fs  gs_cloud_sphere.gs  gs_cylinder_side.gs  gs_oriented_circle.gs  vs_colored_cloud_point.vs  vs_colored_cloud_sphere.vs  vs_colored_mesh.vs  vs_cylinder_side.vs  vs_oriented_circle.vs  vs_unicolor_cloud_point.vs  vs_unicolor_cloud_sphere.vs  vs_unicolor_mesh.vs
